Latin (basic/ASCII only) and numeric petite caps.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -1740,5 +1740,81 @@
     <string>u1D_66E_.glif</string>
     <key>u1D66F</key>
     <string>u1D_66F_.glif</string>
+    <key>zero.taboldstyle</key>
+    <string>zero.taboldstyle.glif</string>
+    <key>one.taboldstyle</key>
+    <string>one.taboldstyle.glif</string>
+    <key>two.taboldstyle</key>
+    <string>two.taboldstyle.glif</string>
+    <key>three.taboldstyle</key>
+    <string>three.taboldstyle.glif</string>
+    <key>four.taboldstyle</key>
+    <string>four.taboldstyle.glif</string>
+    <key>five.taboldstyle</key>
+    <string>five.taboldstyle.glif</string>
+    <key>six.taboldstyle</key>
+    <string>six.taboldstyle.glif</string>
+    <key>seven.taboldstyle</key>
+    <string>seven.taboldstyle.glif</string>
+    <key>eight.taboldstyle</key>
+    <string>eight.taboldstyle.glif</string>
+    <key>nine.taboldstyle</key>
+    <string>nine.taboldstyle.glif</string>
+    <key>a.pc</key>
+    <string>a.pc.glif</string>
+    <key>b.pc</key>
+    <string>b.pc.glif</string>
+    <key>c.pc</key>
+    <string>c.pc.glif</string>
+    <key>d.pc</key>
+    <string>d.pc.glif</string>
+    <key>e.pc</key>
+    <string>e.pc.glif</string>
+    <key>f.pc</key>
+    <string>f.pc.glif</string>
+    <key>g.pc</key>
+    <string>g.pc.glif</string>
+    <key>h.pc</key>
+    <string>h.pc.glif</string>
+    <key>i.pc</key>
+    <string>i.pc.glif</string>
+    <key>j.pc</key>
+    <string>j.pc.glif</string>
+    <key>k.pc</key>
+    <string>k.pc.glif</string>
+    <key>l.pc</key>
+    <string>l.pc.glif</string>
+    <key>m.pc</key>
+    <string>m.pc.glif</string>
+    <key>n.pc</key>
+    <string>n.pc.glif</string>
+    <key>o.pc</key>
+    <string>o.pc.glif</string>
+    <key>p.pc</key>
+    <string>p.pc.glif</string>
+    <key>q.pc</key>
+    <string>q.pc.glif</string>
+    <key>r.pc</key>
+    <string>r.pc.glif</string>
+    <key>s.pc</key>
+    <string>s.pc.glif</string>
+    <key>t.pc</key>
+    <string>t.pc.glif</string>
+    <key>u.pc</key>
+    <string>u.pc.glif</string>
+    <key>v.pc</key>
+    <string>v.pc.glif</string>
+    <key>w.pc</key>
+    <string>w.pc.glif</string>
+    <key>x.pc</key>
+    <string>x.pc.glif</string>
+    <key>y.pc</key>
+    <string>y.pc.glif</string>
+    <key>z.pc</key>
+    <string>z.pc.glif</string>
+    <key>ae.pc</key>
+    <string>ae.pc.glif</string>
+    <key>oe.pc</key>
+    <string>oe.pc.glif</string>
   </dict>
 </plist>
