--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -2438,5 +2438,51 @@
     <string>uniA_4F_F_.glif</string>
     <key>uni2010</key>
     <string>uni2010.glif</string>
+    <key>uniFE50</key>
+    <string>uniF_E_50.glif</string>
+    <key>uniFE52</key>
+    <string>uniF_E_52.glif</string>
+    <key>uniFE55</key>
+    <string>uniF_E_55.glif</string>
+    <key>uniFE54</key>
+    <string>uniF_E_54.glif</string>
+    <key>uniFE56</key>
+    <string>uniF_E_56.glif</string>
+    <key>uniFE57</key>
+    <string>uniF_E_57.glif</string>
+    <key>uniFE58</key>
+    <string>uniF_E_58.glif</string>
+    <key>uniFE59</key>
+    <string>uniF_E_59.glif</string>
+    <key>uniFE5A</key>
+    <string>uniF_E_5A_.glif</string>
+    <key>uniFE5B</key>
+    <string>uniF_E_5B_.glif</string>
+    <key>uniFE5C</key>
+    <string>uniF_E_5C_.glif</string>
+    <key>uniFE5F</key>
+    <string>uniF_E_5F_.glif</string>
+    <key>uniFE60</key>
+    <string>uniF_E_60.glif</string>
+    <key>uniFE61</key>
+    <string>uniF_E_61.glif</string>
+    <key>uniFE62</key>
+    <string>uniF_E_62.glif</string>
+    <key>uniFE63</key>
+    <string>uniF_E_63.glif</string>
+    <key>uniFE64</key>
+    <string>uniF_E_64.glif</string>
+    <key>uniFE65</key>
+    <string>uniF_E_65.glif</string>
+    <key>uniFE66</key>
+    <string>uniF_E_66.glif</string>
+    <key>uniFE68</key>
+    <string>uniF_E_68.glif</string>
+    <key>uniFE69</key>
+    <string>uniF_E_69.glif</string>
+    <key>uniFE6A</key>
+    <string>uniF_E_6A_.glif</string>
+    <key>uniFE6B</key>
+    <string>uniF_E_6B_.glif</string>
   </dict>
 </plist>
