Fix corrupted files.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -2484,5 +2484,77 @@
     <string>uniF_E_6A_.glif</string>
     <key>uniFE6B</key>
     <string>uniF_E_6B_.glif</string>
+	<key>longs</key>
+    <string>longs.glif</string>
+	<key>uni20A9.alt</key>
+    <string>uni20A_9.alt.glif</string>
+	<key>uni2715</key>
+    <string>uni2715.glif</string>
+	<key>uni2716</key>
+    <string>uni2716.glif</string>
+	<key>uni2731</key>
+    <string>uni2731.glif</string>
+	<key>uni2732</key>
+    <string>uni2732.glif</string>
+	<key>uni273B</key>
+    <string>uni273B_.glif</string>
+	<key>uni2753</key>
+    <string>uni2753.glif</string>
+	<key>uni2757</key>
+    <string>uni2757.glif</string>
+	<key>uni2759</key>
+    <string>uni2759.glif</string>
+	<key>uni275B</key>
+    <string>uni275B_.glif</string>
+	<key>uni275C</key>
+    <string>uni275C_.glif</string>
+	<key>uni275D</key>
+    <string>uni275D_.glif</string>
+	<key>uni275E</key>
+    <string>uni275E_.glif</string>
+	<key>uni275F</key>
+    <string>uni275F_.glif</string>
+	<key>uni2760</key>
+    <string>uni2760.glif</string>
+	<key>uni2768</key>
+    <string>uni2768.glif</string>
+	<key>uni2769</key>
+    <string>uni2769.glif</string>
+	<key>uni276E</key>
+    <string>uni276E_.glif</string>
+	<key>uni276F</key>
+    <string>uni276F_.glif</string>
+	<key>uni2774</key>
+    <string>uni2774.glif</string>
+	<key>uni2775</key>
+    <string>uni2775.glif</string>
+	<key>uni2795</key>
+    <string>uni2795.glif</string>
+	<key>uni2796</key>
+    <string>uni2796.glif</string>
+	<key>uni2797</key>
+    <string>uni2797.glif</string>
+	<key>uni2A2F</key>
+    <string>uni2A_2F_.glif</string>
+	<key>u1F4B2</key>
+    <string>u1F_4B_2.glif</string>
+	<key>u1F672</key>
+    <string>u1F_672.glif</string>
+	<key>u1F674</key>
+    <string>u1F_674.glif</string>
+	<key>u1F675</key>
+    <string>u1F_675.glif</string>
+	<key>u1F7B0</key>
+    <string>u1F_7B_0.glif</string>
+	<key>u1F7B1</key>
+    <string>u1F_7B_1.glif</string>
+	<key>u1F7B2</key>
+    <string>u1F_7B_2.glif</string>
+	<key>dollar.alt</key>
+    <string>dollar.alt.glif</string>
+	<key>asterisk.alt</key>
+    <string>asterisk.alt.glif</string>
+	<key>zero.zero</key>
+    <string>zero.zero.glif</string>
   </dict>
 </plist>
