Several more symbols.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -2798,5 +2798,47 @@
     <string>uni2E_41.glif</string>
     <key>uni2E3D</key>
     <string>uni2E_3D_.glif</string>
+    <key>uni207A</key>
+    <string>uni207A_.glif</string>
+    <key>uni207B</key>
+    <string>uni207B_.glif</string>
+    <key>uni207C</key>
+    <string>uni207C_.glif</string>
+    <key>uni207D</key>
+    <string>uni207D_.glif</string>
+    <key>uni207E</key>
+    <string>uni207E_.glif</string>
+    <key>uni208A</key>
+    <string>uni208A_.glif</string>
+    <key>uni208B</key>
+    <string>uni208B_.glif</string>
+    <key>uni208C</key>
+    <string>uni208C_.glif</string>
+    <key>uni208D</key>
+    <string>uni208D_.glif</string>
+    <key>uni208E</key>
+    <string>uni208E_.glif</string>
+    <key>uni02BB</key>
+    <string>uni02B_B_.glif</string>
+    <key>uni02BC</key>
+    <string>uni02B_C_.glif</string>
+    <key>uni2409</key>
+    <string>uni2409.glif</string>
+    <key>uni240A</key>
+    <string>uni240A_.glif</string>
+    <key>uni240B</key>
+    <string>uni240B_.glif</string>
+    <key>uni240C</key>
+    <string>uni240C_.glif</string>
+    <key>uni240D</key>
+    <string>uni240D_.glif</string>
+    <key>uni2420</key>
+    <string>uni2420.glif</string>
+    <key>uni2422</key>
+    <string>uni2422.glif</string>
+    <key>uni2423</key>
+    <string>uni2423.glif</string>
+    <key>uni2424</key>
+    <string>uni2424.glif</string>
   </dict>
 </plist>
