Greek-based Latin extensions.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -3062,5 +3062,23 @@
     <string>uni2127.glif</string>
     <key>uni2129</key>
     <string>uni2129.glif</string>
+    <key>micro</key>
+    <string>micro.glif</string>
+    <key>uniA7B3</key>
+    <string>uniA_7B_3.glif</string>
+    <key>uniA7B4</key>
+    <string>uniA_7B_4.glif</string>
+    <key>uni0251</key>
+    <string>uni0251.glif</string>
+    <key>uni0252</key>
+    <string>uni0252.glif</string>
+    <key>uni0269</key>
+    <string>uni0269.glif</string>
+    <key>uni019B</key>
+    <string>uni019B_.glif</string>
+    <key>uni0278</key>
+    <string>uni0278.glif</string>
+    <key>uni0196</key>
+    <string>uni0196.glif</string>
   </dict>
 </plist>
