--- a/ufo/Courier Prime.ufo/fontinfo.plist
+++ b/ufo/Courier Prime.ufo/fontinfo.plist
@@ -6,6 +6,8 @@
     <string>Courier Prime</string>
     <key>styleName</key>
     <string>Regular</string>
+    <key>styleMapFamilyName</key>
+    <string>Courier Prime Light</string>
     <key>styleMapStyleName</key>
     <string>regular</string>
     <key>versionMajor</key>
