Checkpoint for Coptic development.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -3080,5 +3080,91 @@
     <string>uni0278.glif</string>
     <key>uni0196</key>
     <string>uni0196.glif</string>
+    <key>uni2C82</key>
+    <string>uni2C_82.glif</string>
+    <key>uni2C83</key>
+    <string>uni2C_83.glif</string>
+    <key>uni2C84</key>
+    <string>uni2C_84.glif</string>
+    <key>uni2C85</key>
+    <string>uni2C_85.glif</string>
+    <key>uni2C86</key>
+    <string>uni2C_86.glif</string>
+    <key>uni2C8C</key>
+    <string>uni2C_8C_.glif</string>
+    <key>uni2C8D</key>
+    <string>uni2C_8D_.glif</string>
+    <key>uni2C8E</key>
+    <string>uni2C_8E_.glif</string>
+    <key>uni2C8F</key>
+    <string>uni2C_8F_.glif</string>
+    <key>uni2C90</key>
+    <string>uni2C_90.glif</string>
+    <key>uni2C92</key>
+    <string>uni2C_92.glif</string>
+    <key>uni2C93</key>
+    <string>uni2C_93.glif</string>
+    <key>uni2C94</key>
+    <string>uni2C_94.glif</string>
+    <key>uni2C95</key>
+    <string>uni2C_95.glif</string>
+    <key>uni2C96</key>
+    <string>uni2C_96.glif</string>
+    <key>uni2C98</key>
+    <string>uni2C_98.glif</string>
+    <key>uni2C99</key>
+    <string>uni2C_99.glif</string>
+    <key>uni2C9A</key>
+    <string>uni2C_9A_.glif</string>
+    <key>uni2C9B</key>
+    <string>uni2C_9B_.glif</string>
+    <key>uni2C9E</key>
+    <string>uni2C_9E_.glif</string>
+    <key>uni2C9F</key>
+    <string>uni2C_9F_.glif</string>
+    <key>uni2CA0</key>
+    <string>uni2C_A_0.glif</string>
+    <key>uni2CA1</key>
+    <string>uni2C_A_1.glif</string>
+    <key>uni2CA2</key>
+    <string>uni2C_A_2.glif</string>
+    <key>uni2CA3</key>
+    <string>uni2C_A_3.glif</string>
+    <key>uni2CA4</key>
+    <string>uni2C_A_4.glif</string>
+    <key>uni2CA5</key>
+    <string>uni2C_A_5.glif</string>
+    <key>uni2CA6</key>
+    <string>uni2C_A_6.glif</string>
+    <key>uni2CA7</key>
+    <string>uni2C_A_7.glif</string>
+    <key>uni2CA8</key>
+    <string>uni2C_A_8.glif</string>
+    <key>uni2CA9</key>
+    <string>uni2C_A_9.glif</string>
+    <key>uni2CAA</key>
+    <string>uni2C_A_A_.glif</string>
+    <key>uni2CAB</key>
+    <string>uni2C_A_B_.glif</string>
+    <key>uni2CAC</key>
+    <string>uni2C_A_C_.glif</string>
+    <key>uni2CAD</key>
+    <string>uni2C_A_D_.glif</string>
+    <key>uni2CBA</key>
+    <string>uni2C_B_A_.glif</string>
+    <key>uni2CBB</key>
+    <string>uni2C_B_B_.glif</string>
+    <key>uni2CCC</key>
+    <string>uni2C_C_C_.glif</string>
+    <key>uni2CCD</key>
+    <string>uni2C_C_D_.glif</string>
+    <key>uni2CD0</key>
+    <string>uni2C_D_0.glif</string>
+    <key>uni2CD1</key>
+    <string>uni2C_D_1.glif</string>
+    <key>uni2CDE</key>
+    <string>uni2C_D_E_.glif</string>
+    <key>uni2CDF</key>
+    <string>uni2C_D_F_.glif</string>
   </dict>
 </plist>
