Checkpoint for Cyrillic development.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -2840,5 +2840,131 @@
     <string>uni2423.glif</string>
     <key>uni2424</key>
     <string>uni2424.glif</string>
+    <key>uni0400</key>
+    <string>uni0400.glif</string>
+    <key>uni040D</key>
+    <string>uni040D_.glif</string>
+    <key>uni0450</key>
+    <string>uni0450.glif</string>
+    <key>uni045D</key>
+    <string>uni045D_.glif</string>
+    <key>uni0472</key>
+    <string>uni0472.glif</string>
+    <key>uni048C</key>
+    <string>uni048C_.glif</string>
+    <key>uni048D</key>
+    <string>uni048D_.glif</string>
+    <key>uni04A4</key>
+    <string>uni04A_4.glif</string>
+    <key>uni04C0</key>
+    <string>uni04C_0.glif</string>
+    <key>uni04C1</key>
+    <string>uni04C_1.glif</string>
+    <key>uni04C2</key>
+    <string>uni04C_2.glif</string>
+    <key>uni04CF</key>
+    <string>uni04C_F_.glif</string>
+    <key>uni04D0</key>
+    <string>uni04D_0.glif</string>
+    <key>uni04D1</key>
+    <string>uni04D_1.glif</string>
+    <key>uni04D2</key>
+    <string>uni04D_2.glif</string>
+    <key>uni04D3</key>
+    <string>uni04D_3.glif</string>
+    <key>uni04D4</key>
+    <string>uni04D_4.glif</string>
+    <key>uni04D5</key>
+    <string>uni04D_5.glif</string>
+    <key>uni04D6</key>
+    <string>uni04D_6.glif</string>
+    <key>uni04D7</key>
+    <string>uni04D_7.glif</string>
+    <key>uni04DA</key>
+    <string>uni04D_A_.glif</string>
+    <key>uni04DB</key>
+    <string>uni04D_B_.glif</string>
+    <key>uni04DC</key>
+    <string>uni04D_C_.glif</string>
+    <key>uni04DD</key>
+    <string>uni04D_D_.glif</string>
+    <key>uni04DE</key>
+    <string>uni04D_E_.glif</string>
+    <key>uni04DF</key>
+    <string>uni04D_F_.glif</string>
+    <key>uni04E2</key>
+    <string>uni04E_2.glif</string>
+    <key>uni04E3</key>
+    <string>uni04E_3.glif</string>
+    <key>uni04E4</key>
+    <string>uni04E_4.glif</string>
+    <key>uni04E5</key>
+    <string>uni04E_5.glif</string>
+    <key>uni04E6</key>
+    <string>uni04E_6.glif</string>
+    <key>uni04E7</key>
+    <string>uni04E_7.glif</string>
+    <key>uni04EA</key>
+    <string>uni04E_A_.glif</string>
+    <key>uni04EB</key>
+    <string>uni04E_B_.glif</string>
+    <key>uni04EC</key>
+    <string>uni04E_C_.glif</string>
+    <key>uni04ED</key>
+    <string>uni04E_D_.glif</string>
+    <key>uni04EE</key>
+    <string>uni04E_E_.glif</string>
+    <key>uni04EF</key>
+    <string>uni04E_F_.glif</string>
+    <key>uni04F0</key>
+    <string>uni04F_0.glif</string>
+    <key>uni04F1</key>
+    <string>uni04F_1.glif</string>
+    <key>uni04F3</key>
+    <string>uni04F_3.glif</string>
+    <key>uni04FE</key>
+    <string>uni04F_E_.glif</string>
+    <key>uni04FF</key>
+    <string>uni04F_F_.glif</string>
+    <key>uni0500</key>
+    <string>uni0500.glif</string>
+    <key>uni0501</key>
+    <string>uni0501.glif</string>
+    <key>uni050C</key>
+    <string>uni050C_.glif</string>
+    <key>uni0510</key>
+    <string>uni0510.glif</string>
+    <key>uni0511</key>
+    <string>uni0511.glif</string>
+    <key>uni051A</key>
+    <string>uni051A_.glif</string>
+    <key>uni051B</key>
+    <string>uni051B_.glif</string>
+    <key>uni051C</key>
+    <string>uni051C_.glif</string>
+    <key>uni051D</key>
+    <string>uni051D_.glif</string>
+    <key>uni1D78</key>
+    <string>uni1D_78.glif</string>
+    <key>uniA668</key>
+    <string>uniA_668.glif</string>
+    <key>uniA669</key>
+    <string>uniA_669.glif</string>
+    <key>uniA66A</key>
+    <string>uniA_66A_.glif</string>
+    <key>uniA66B</key>
+    <string>uniA_66B_.glif</string>
+    <key>uniA644</key>
+    <string>uniA_644.glif</string>
+    <key>uniA645</key>
+    <string>uniA_645.glif</string>
+    <key>uniA698</key>
+    <string>uniA_698.glif</string>
+    <key>uniA699</key>
+    <string>uniA_699.glif</string>
+    <key>uniA66C</key>
+    <string>uniA_66C_.glif</string>
+    <key>uniA66D</key>
+    <string>uniA_66D_.glif</string>
   </dict>
 </plist>
