--- a/ufo/Courier Prime.ufo/fontinfo.plist
+++ b/ufo/Courier Prime.ufo/fontinfo.plist
@@ -6,6 +6,8 @@
     <string>Courier Prime</string>
     <key>styleName</key>
     <string>Regular</string>
+    <key>styleMapFamilyName</key>
+    <string>Courier Prime Light</string>
     <key>styleMapStyleName</key>
     <string>regular</string>
     <key>versionMajor</key>
@@ -29,7 +31,7 @@
     <key>note</key>
     <string></string>
     <key>openTypeHeadCreated</key>
-    <string>2017/03/03 18:18:11</string>
+    <string>2017/03/06 18:11:50</string>
     <key>openTypeHheaAscender</key>
     <integer>1827</integer>
     <key>openTypeHheaDescender</key>
