--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -2840,5 +2840,41 @@
     <string>uni2423.glif</string>
     <key>uni2424</key>
     <string>uni2424.glif</string>
+    <key>uni0E3F</key>
+    <string>uni0E_3F_.glif</string>
+    <key>uni20A2</key>
+    <string>uni20A_2.glif</string>
+    <key>uni20A5</key>
+    <string>uni20A_5.glif</string>
+    <key>uni20A6</key>
+    <string>uni20A_6.glif</string>
+    <key>uni20AD</key>
+    <string>uni20A_D_.glif</string>
+    <key>uni20B1</key>
+    <string>uni20B_1.glif</string>
+    <key>uni20B2</key>
+    <string>uni20B_2.glif</string>
+    <key>uni20B3</key>
+    <string>uni20B_3.glif</string>
+    <key>uni20B4</key>
+    <string>uni20B_4.glif</string>
+    <key>uni20B5</key>
+    <string>uni20B_5.glif</string>
+    <key>uni20B8</key>
+    <string>uni20B_8.glif</string>
+    <key>uni20B9</key>
+    <string>uni20B_9.glif</string>
+    <key>uni20BB</key>
+    <string>uni20B_B_.glif</string>
+    <key>uni20BD</key>
+    <string>uni20B_D_.glif</string>
+    <key>uni20BF</key>
+    <string>uni20B_F_.glif</string>
+    <key>u10196</key>
+    <string>u10196.glif</string>
+    <key>u10197</key>
+    <string>u10197.glif</string>
+    <key>u10199</key>
+    <string>u10199.glif</string>
   </dict>
 </plist>
