Letter-like and enclosed characters.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -2926,5 +2926,127 @@
     <string>u10193.glif</string>
     <key>u10194</key>
     <string>u10194.glif</string>
+    <key>uni2104</key>
+    <string>uni2104.glif</string>
+    <key>uni2105</key>
+    <string>uni2105.glif</string>
+    <key>uni2108</key>
+    <string>uni2108.glif</string>
+    <key>uni210F</key>
+    <string>uni210F_.glif</string>
+    <key>uni2117</key>
+    <string>uni2117.glif</string>
+    <key>prescription</key>
+    <string>prescription.glif</string>
+    <key>uni212A</key>
+    <string>uni212A_.glif</string>
+    <key>uni212B</key>
+    <string>uni212B_.glif</string>
+    <key>uni2132</key>
+    <string>uni2132.glif</string>
+    <key>uni2139</key>
+    <string>uni2139.glif</string>
+    <key>uni213A</key>
+    <string>uni213A_.glif</string>
+    <key>uni2141</key>
+    <string>uni2141.glif</string>
+    <key>uni2142</key>
+    <string>uni2142.glif</string>
+    <key>uni2143</key>
+    <string>uni2143.glif</string>
+    <key>uni2144</key>
+    <string>uni2144.glif</string>
+    <key>uni214A</key>
+    <string>uni214A_.glif</string>
+    <key>uni214B</key>
+    <string>uni214B_.glif</string>
+    <key>uni214E</key>
+    <string>uni214E_.glif</string>
+    <key>uni2460</key>
+    <string>uni2460.glif</string>
+    <key>uni2461</key>
+    <string>uni2461.glif</string>
+    <key>uni2462</key>
+    <string>uni2462.glif</string>
+    <key>uni2463</key>
+    <string>uni2463.glif</string>
+    <key>uni2464</key>
+    <string>uni2464.glif</string>
+    <key>uni2465</key>
+    <string>uni2465.glif</string>
+    <key>uni2466</key>
+    <string>uni2466.glif</string>
+    <key>uni2467</key>
+    <string>uni2467.glif</string>
+    <key>uni2468</key>
+    <string>uni2468.glif</string>
+    <key>uni24EA</key>
+    <string>uni24E_A_.glif</string>
+    <key>uni24B6</key>
+    <string>uni24B_6.glif</string>
+    <key>uni24B7</key>
+    <string>uni24B_7.glif</string>
+    <key>uni24B8</key>
+    <string>uni24B_8.glif</string>
+    <key>uni24B9</key>
+    <string>uni24B_9.glif</string>
+    <key>uni24BA</key>
+    <string>uni24B_A_.glif</string>
+    <key>uni24BB</key>
+    <string>uni24B_B_.glif</string>
+    <key>uni24BC</key>
+    <string>uni24B_C_.glif</string>
+    <key>uni24BD</key>
+    <string>uni24B_D_.glif</string>
+    <key>uni24BE</key>
+    <string>uni24B_E_.glif</string>
+    <key>uni24BF</key>
+    <string>uni24B_F_.glif</string>
+    <key>uni24C0</key>
+    <string>uni24C_0.glif</string>
+    <key>uni24C1</key>
+    <string>uni24C_1.glif</string>
+    <key>uni24C2</key>
+    <string>uni24C_2.glif</string>
+    <key>uni24C3</key>
+    <string>uni24C_3.glif</string>
+    <key>uni24C4</key>
+    <string>uni24C_4.glif</string>
+    <key>uni24C5</key>
+    <string>uni24C_5.glif</string>
+    <key>uni24C6</key>
+    <string>uni24C_6.glif</string>
+    <key>uni24C7</key>
+    <string>uni24C_7.glif</string>
+    <key>uni24C8</key>
+    <string>uni24C_8.glif</string>
+    <key>uni24C9</key>
+    <string>uni24C_9.glif</string>
+    <key>uni24CA</key>
+    <string>uni24C_A_.glif</string>
+    <key>uni24CB</key>
+    <string>uni24C_B_.glif</string>
+    <key>uni24CC</key>
+    <string>uni24C_C_.glif</string>
+    <key>uni24CD</key>
+    <string>uni24C_D_.glif</string>
+    <key>uni24CE</key>
+    <string>uni24C_E_.glif</string>
+    <key>uni24CF</key>
+    <string>uni24C_F_.glif</string>
+    <key>u1D18C</key>
+    <string>u1D_18C_.glif</string>
+    <key>u1D18D</key>
+    <string>u1D_18D_.glif</string>
+    <key>u1D18E</key>
+    <string>u1D_18E_.glif</string>
+    <key>u1D18F</key>
+    <string>u1D_18F_.glif</string>
+    <key>u1D190</key>
+    <string>u1D_190.glif</string>
+    <key>u1D191</key>
+    <string>u1D_191.glif</string>
+    <key>u1F12F</key>
+    <string>u1F_12F_.glif</string>
   </dict>
 </plist>
