--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -3048,5 +3048,55 @@
     <string>u1D_191.glif</string>
     <key>u1F12F</key>
     <string>u1F_12F_.glif</string>
+    <key>uni2613</key>
+    <string>uni2613.glif</string>
+    <key>uni2627</key>
+    <string>uni2627.glif</string>
+    <key>uni2629</key>
+    <string>uni2629.glif</string>
+    <key>uni271D</key>
+    <string>uni271D_.glif</string>
+    <key>uni2726</key>
+    <string>uni2726.glif</string>
+    <key>uni274C</key>
+    <string>uni274C_.glif</string>
+    <key>uni2780</key>
+    <string>uni2780.glif</string>
+    <key>uni2781</key>
+    <string>uni2781.glif</string>
+    <key>uni2782</key>
+    <string>uni2782.glif</string>
+    <key>uni2783</key>
+    <string>uni2783.glif</string>
+    <key>uni2784</key>
+    <string>uni2784.glif</string>
+    <key>uni2785</key>
+    <string>uni2785.glif</string>
+    <key>uni2786</key>
+    <string>uni2786.glif</string>
+    <key>uni2787</key>
+    <string>uni2787.glif</string>
+    <key>uni2788</key>
+    <string>uni2788.glif</string>
+    <key>uni2B55</key>
+    <string>uni2B_55.glif</string>
+    <key>u1F4A4</key>
+    <string>u1F_4A_4.glif</string>
+    <key>u1F4B5</key>
+    <string>u1F_4B_5.glif</string>
+    <key>u1F522</key>
+    <string>u1F_522.glif</string>
+    <key>u1F540</key>
+    <string>u1F_540.glif</string>
+    <key>u1F542</key>
+    <string>u1F_542.glif</string>
+    <key>u1F547</key>
+    <string>u1F_547.glif</string>
+    <key>u1F5D1</key>
+    <string>u1F_5D_1.glif</string>
+    <key>u1F7AC</key>
+    <string>u1F_7A_C_.glif</string>
+    <key>uni2629.alt</key>
+    <string>uni2629.alt.glif</string>
   </dict>
 </plist>
