Checkpoint for script development.

--- a/ufo/Courier Prime.ufo/glyphs/contents.plist
+++ b/ufo/Courier Prime.ufo/glyphs/contents.plist
@@ -3776,5 +3776,85 @@
     <string>uniA_B_41.glif</string>
     <key>uniAB42</key>
     <string>uniA_B_42.glif</string>
+    <key>uni2130</key>
+    <string>uni2130.glif</string>
+    <key>uni2107</key>
+    <string>uni2107.glif</string>
+    <key>uni210A</key>
+    <string>uni210A_.glif</string>
+    <key>uni210B</key>
+    <string>uni210B_.glif</string>
+    <key>uni2110</key>
+    <string>uni2110.glif</string>
+    <key>uni2112</key>
+    <string>uni2112.glif</string>
+    <key>weierstrass</key>
+    <string>weierstrass.glif</string>
+    <key>uni212F</key>
+    <string>uni212F_.glif</string>
+    <key>uni2134</key>
+    <string>uni2134.glif</string>
+    <key>u1D49C</key>
+    <string>u1D_49C_.glif</string>
+    <key>u1D4A2</key>
+    <string>u1D_4A_2.glif</string>
+    <key>u1D4A5</key>
+    <string>u1D_4A_5.glif</string>
+    <key>u1D4A6</key>
+    <string>u1D_4A_6.glif</string>
+    <key>u1D4AA</key>
+    <string>u1D_4A_A_.glif</string>
+    <key>u1D4AB</key>
+    <string>u1D_4A_B_.glif</string>
+    <key>u1D4AC</key>
+    <string>u1D_4A_C_.glif</string>
+    <key>u1D4B5</key>
+    <string>u1D_4B_5.glif</string>
+    <key>u1D4B6</key>
+    <string>u1D_4B_6.glif</string>
+    <key>u1D4B7</key>
+    <string>u1D_4B_7.glif</string>
+    <key>u1D4B8</key>
+    <string>u1D_4B_8.glif</string>
+    <key>u1D4B9</key>
+    <string>u1D_4B_9.glif</string>
+    <key>u1D4BB</key>
+    <string>u1D_4B_B_.glif</string>
+    <key>u1D4BD</key>
+    <string>u1D_4B_D_.glif</string>
+    <key>u1D4BE</key>
+    <string>u1D_4B_E_.glif</string>
+    <key>u1D4BF</key>
+    <string>u1D_4B_F_.glif</string>
+    <key>u1D4C0</key>
+    <string>u1D_4C_0.glif</string>
+    <key>u1D4C1</key>
+    <string>u1D_4C_1.glif</string>
+    <key>u1D4C2</key>
+    <string>u1D_4C_2.glif</string>
+    <key>u1D4C3</key>
+    <string>u1D_4C_3.glif</string>
+    <key>u1D4C5</key>
+    <string>u1D_4C_5.glif</string>
+    <key>u1D4C6</key>
+    <string>u1D_4C_6.glif</string>
+    <key>u1D4C7</key>
+    <string>u1D_4C_7.glif</string>
+    <key>u1D4C8</key>
+    <string>u1D_4C_8.glif</string>
+    <key>u1D4C9</key>
+    <string>u1D_4C_9.glif</string>
+    <key>u1D4CA</key>
+    <string>u1D_4C_A_.glif</string>
+    <key>u1D4CB</key>
+    <string>u1D_4C_B_.glif</string>
+    <key>u1D4CC</key>
+    <string>u1D_4C_C_.glif</string>
+    <key>u1D4CD</key>
+    <string>u1D_4C_D_.glif</string>
+    <key>u1D4CE</key>
+    <string>u1D_4C_E_.glif</string>
+    <key>u1D4CF</key>
+    <string>u1D_4C_F_.glif</string>
   </dict>
 </plist>
